tests/pass/test_trait_default.tk
import std/io::println

trait @Base {
    pub fn foo(self) -> i32 {
        return 100
    }
    
    pub fn bar(self) -> i32
}

shape Test (
    val: i32
)

impl Test@Base {
    fn bar(self) -> i32 {
       return self.val + 1
    }
    // foo is using default implementation
}

fn main() -> i32 {
    auto t = Test(val = 20)
    auto f = t.foo()
    auto b = t.bar()
    println("Foo: {}", f)
    println("Bar: {}", b)
    return 0
}
